Fixed: Ticks and labels on charts are intercepting events.
Added a tick mark to the middle of horizontal sliders
# 1.28.02 (42016) Jun 30, 2010
Internationalized strings
Switched to m/s^2 to support pre-existing translations specified as html.
Fixed: When you resize the "graph playback cursor" doesn't redraw itself until you grab it or start playing it
Added text for chart maximize buttons
Fixed: Axes alignment is broken on horizontal zoom
Changed the layout of charts so that they use all available vertical space.
Increased font size for readouts in chart tab
Factored out creation of chart slider node thumbnails
Factored out cursor usage
Moved charts to common code
# 1.28.01 (41829) Jun 21, 2010
Fixed: Axis rotation fails for charts tab
Added expression evaluation dialog
Added menu item to flip x-axis
Refactoring and documentation for MovingManState and related classes.
# 0.00.05 (41764) Jun 17, 2010
Fixed: Chart cursor goes off chart when zoomed in
Fixed: zoom button should have plus on top and right
Added tree and house graphics
# 0.00.04 (41679) Jun 14, 2010
Fixed: Sim should start up in record mode instead of playback
Fixed: Reset all should switch to record mode
Fixed: Reset all should restore playback speed to 1.0
Fixed record and playback so that chart readouts match up with the chart curve graphics
Made it so that the chart serieses are sampled at the same time, so that derivatives don't lag
# 0.00.03 (41640) Jun 14, 2010
Improved the visibility of the in-chart cursor node
Added handling for starting recording halfway through playback
Fixed: Horizontal line drawn when clearing velocity and acceleration curves
Fixed: Chart series needs to be re-transformed on component resize event
Added horizontal zoom buttons
Improvements for vertical zoom buttons
Update charts and indicator arrows when zoom changes
Added initial version of vertical zoom buttons
Fixed: Play area arrows look incorrect at small magnitudes